--- a/admin/add-card.html
+++ b/admin/add-card.html
@@ -59,7 +59,7 @@
                <div class="form-style-2">
                     <div class="form-style-2-heading">Fill this form to add a Card</div>
                     <form action="" method="post">
-                            <label for="field1"><span>Value</span><select name="field1" class="select-field">
+                            <label for="field1"><span>Value<span class="required">*</span></span><select name="field1" class="select-field">
                                     <option value="10">$10.00</option>
                                     <option value="20">$20.00</option>
                                     <option value="30">$30.00</option>
