--- a/admin/add-game.html
+++ b/admin/add-game.html
@@ -63,7 +63,7 @@
                     <label for="field2"><span>Name <span class="required">*</span></span><input type="text" class="input-field" name="field1" value="" size="50"  /></label>
                     <label for="field3"><span>Price <span class="required">*</span></span><input type="text" class="input-field" name="field1" value="" /></label>
                     <label for="field5"><span>Quantity <span class="required">*</span></span><input type="text" class="input-field" name="field1" size="20"  /></label>
-                    <label for="field5"><span>Genre</span><select name="field5" class="select-field">
+                    <label for="field5"><span>Genre<span class="required">*</span></span><select name="field5" class="select-field">
                             <option value="Action">Action</option>
                             <option value="Action Adventure">Action Adventure</option>
                             <option value="Adventure">Adventure</option>
@@ -73,7 +73,7 @@
                             <option value="Role Playing">Role Playing</option>
                     </select></label>
 
-                    <label for="field6"><span>Flatform</span><select name="field6" class="select-field">
+                    <label for="field6"><span>Flatform<span class="required">*</span></span><select name="field6" class="select-field">
                             <option value="Steam">Steam</option>
                             <option value="Origin">Origin</option>
                             <option value="Uplay">Uplay</option>
