--- a/admin/list/games-list.html
+++ b/admin/list/games-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>Game List</title>
+   <title>Game details</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -35,7 +35,7 @@
             <td>Adventure</td>
             <td>Steam</td>
             <td>5</td>
-            <td><a href="../game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
+            <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
             <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
@@ -46,7 +46,7 @@
                 <td>Action</td>
                 <td>EA</td>
                 <td>7</td>
-                <td><a href="../game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
+                <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
                 <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
@@ -57,7 +57,7 @@
               <td>Role playing</td>
               <td>Microsoft</td>
               <td>7</td>
-              <td><a href="../game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
+              <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
@@ -68,7 +68,7 @@
               <td>Action</td>
               <td>ProSoft</td>
               <td>15</td>
-              <td><a href="../game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
+              <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
@@ -79,7 +79,7 @@
            <td>Action Adventure</td>
            <td>Uplay</td>
            <td>26</td>
-           <td><a href="../game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
+           <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
            <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
@@ -90,7 +90,7 @@
            <td>Action Adventure</td>
            <td>Rockstar Game</td>
            <td>16</td>
-           <td><a href="../game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
+           <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
            <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
@@ -101,7 +101,7 @@
               <td>Role playing</td>
               <td>Uplay</td>
               <td>46</td>
-              <td><a href="../game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
+              <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
         </tbody>
