--- a/admin/game-info.html
+++ b/admin/game-info.html
@@ -26,36 +26,43 @@
                         <img src="https://images2.alphacoders.com/819/819958.jpg">
                     </div>
                     <div class="edit-btn">edit</div>
+                    <div class="edit-bar"><input type="file" accept="image/png, image/jpeg"></input></div>
                 </div>
                 <div class="edit-line">
                         <div class="keyword">Name</div>
                         <div class="details">The Forest</div>
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><input type="text"></input></div>
                  </div>
                 <div class="edit-line">
                         <div class="keyword">Price</div>
                         <div class="details">$49.99</div>
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><input type="text"></input></div>
                  </div>
                  <div class="edit-line">
                         <div class="keyword">Genre</div>
                         <div class="details">Action adventure</div>
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><input type="text"></input></div>
                 </div>
                 <div class="edit-line">
                         <div class="keyword">Platform</div>
                         <div class="details">Steam</div>
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><input type="text"></input></div>
                 </div>
                 <div class="edit-line">
                         <div class="keyword">Details</div>
                         <div class="details">None</div>
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><input type="text"></input></div>
                 </div>
                 <div class="edit-line">
                         <div class="keyword">Quantity</div>
                         <div class="details">2</div>
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><input type="text"></input></div>
                 </div>
                 <div class="edit-line">
                         <div class="keyword">Description</div>
@@ -67,6 +74,13 @@
                               the elements and store valuables, all while teaming up with (or preying upon) 
                               hundreds of other players to survive, dominate... and escape!</div>
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><textarea rows="10" cols="120">As a man or woman stranded, naked, freezing, and 
+                                starving on the unforgiving shores of a mysterious island called ARK, 
+                                use your skill and cunning to kill or tame and ride the plethora of leviathan 
+                                dinosaurs and other primeval creatures roaming the land. Hunt, harvest resources,
+                                 craft items, grow crops, research technologies, and build shelters to withstand
+                                  the elements and store valuables, all while teaming up with (or preying upon) 
+                                  hundreds of other players to survive, dominate... and escape!</textarea></div>
                 </div>
                 <div class="edit-line">
                         <div class="keyword">System Requirement</div>
@@ -77,6 +91,11 @@
                                 Storage: 65 GB available space</div>
 
                         <div class="edit-btn">edit</div>
+                        <div class="edit-bar"><textarea rows="10" cols="120">OS: Windows 8.1 64 Bit, Windows 8 64 Bit, Windows 7 64 Bit Service Pack 1, Windows Vista 64 Bit Service Pack 2* (*NVIDIA video card recommended if running Vista OS)<br>
+                                Processor: Intel Core 2 Quad CPU Q6600 @ 2.40GHz (4 CPUs) / AMD Phenom 9850 Quad-Core Processor (4 CPUs) @ 2.5GHz<br>
+                                Memory: 4 GB RAM<br>
+                                Graphics: NVIDIA 9800 GT 1GB / AMD HD 4870 1GB (DX 10, 10.1, 11)<br>
+                                Storage: 65 GB available space</textarea></div>
                 </div>
                 <div class="button-wrapper">
                     <div class="button">Save</div>
