--- a/admin/details/game-info.html
+++ b/admin/details/game-info.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../style/edit-style.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script/noti.js"></script>
+    <script src="../script/noti.js"></script>
 </head>
 <body>
        <!--Body-->
