Add logo for list and infomation for card list

--- a/admin/list/cards-list.html
+++ b/admin/list/cards-list.html
@@ -3,6 +3,7 @@
 <head>
   <title>Cards List</title>
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="../Images/gamehublogo.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="../style/table-style.css">
@@ -32,65 +33,65 @@
           <tr>
             <th scope="row">1</th>
             <td>A0060</td>
-            <td>$10.00</td>
+            <td>$22.00</td>
             <td>Vinagame</td>
-            <td>9525 4632 2568</td>
-            <td>92567426783 </td>
+            <td>9525 0000 2568 1236</td>
+            <td>925674267832 </td>
             <td>31/12/2019</td>
             <td>15</td>
-            <td>$9.95</td>
+            <td>$20.00</td>
             <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
             <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
               <th scope="row">1</th>
-            <td>A0060</td>
-            <td>$10.00</td>
-            <td>Vinagame</td>
-            <td>9525 4632 2568</td>
-            <td>92567426783 </td>
-            <td>31/12/2019</td>
-            <td>15</td>
-            <td>$9.95</td>
+            <td>B0062</td>
+            <td>$12.00</td>
+            <td>Garena</td>
+            <td>8532 0000 8548 2428</td>
+            <td>754123982452 </td>
+            <td>15/01/2018</td>
+            <td>25</td>
+            <td>$9.99</td>
             <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
             <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
               <th scope="row">1</th>
-              <td>A0060</td>
-              <td>$10.00</td>
-              <td>Vinagame</td>
-              <td>9525 4632 2568</td>
-              <td>92567426783 </td>
+              <td>A0069</td>
+              <td>$15.00</td>
+              <td>Vinaphone</td>
+              <td>9125 0000 2128 7992</td>
+              <td>456782145321 </td>
               <td>31/12/2019</td>
+              <td>20</td>
+              <td>$20.00</td>
+              <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
+              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
+          </tr>
+          <tr>
+              <th scope="row">1</th>
+              <td>C0070</td>
+              <td>$15.00</td>
+              <td>Viettel</td>
+              <td>4561 0000 7515 8124</td>
+              <td>789425874212</td>
+              <td>29/02/2019</td>
               <td>15</td>
-              <td>$9.95</td>
+              <td>$20.00</td>
               <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
               <th scope="row">1</th>
               <td>A0060</td>
-              <td>$10.00</td>
-              <td>Vinagame</td>
-              <td>9525 4632 2568</td>
-              <td>92567426783 </td>
+              <td>$20.00</td>
+              <td>Zing Card</td>
+              <td>7561 0000 5245 7523</td>
+              <td>456321798952 </td>
               <td>31/12/2019</td>
               <td>15</td>
-              <td>$9.95</td>
-              <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
-              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
-          </tr>
-          <tr>
-              <th scope="row">1</th>
-              <td>A0060</td>
               <td>$10.00</td>
-              <td>Vinagame</td>
-              <td>9525 4632 2568</td>
-              <td>92567426783 </td>
-              <td>31/12/2019</td>
-              <td>15</td>
-              <td>$9.95</td>
               <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
 
