--- a/admin/list/new-orders-game.html
+++ b/admin/list/new-orders-game.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>New Orders of Game</title>
+  <title>New Orders of Game</title>
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="../Images/gamehublogo.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="../style/table-style.css">
