Add customer management

--- a/admin/customer.html
+++ b/admin/customer.html
@@ -36,7 +36,7 @@
         <div class="logo">
             <a href="../index.html"><img id="logo-img" src="../images/gamehub.png" alt="GameHub Logo"></a>
         </div>
-
+        
         <!--Login Button (Desktop)-->
         <a class="login-wrapper pretty-anchor" href="../account/admin-login.html">
             <div class="login-btn"><i class="fa fa-user"></i>sign in</div>
@@ -46,17 +46,14 @@
             <div class="list">
                 <a class="list-box" href="dashboard-game.html">Dashboard</a>
                 <a class="list-box" href="add-game.html">Add Product</a>
-                <a class="list-box" href="customer.html">Customer</a>
-                <a class="list-box main" href="remove-game.html">Remove/<br>Edit Product</a>
+                <a class="list-box main" href="customer.html">Customer</a>
+                <a class="list-box" href="remove-game.html">Remove/<br>Edit Product</a>
                 <a class="list-box" href="orders.html">Orders</a>
             </div>
             <div class="info">
-               <div class="remove-product-title">Remove Product
-                    <a href="remove-game.html" class="button game main-btn">Game</a>
-                <a href="remove-card.html" class="button card">Card</a>
-               </div>
+               <div class="remove-product-title">Customer</div>
                <div class="table-wrapper">
-                    <iframe src="list/games-list.html" frameBorder="0" border-radius= "17px" height="100%" width="100%"></iframe>
+                    <iframe src="list/customer-list.html" frameBorder="0" height="100%" width="100%"></iframe>
                 </div>
              </div>
             </div>
