--- a/admin/dashboard-card.html
+++ b/admin/dashboard-card.html
@@ -46,6 +46,7 @@
             <div class="list">
                 <a class="list-box main" href="dashboard-game.html">Dashboard</a>
                 <a class="list-box" href="add-game.html">Add Product</a>
+                <a class="list-box" href="customer.html">Customer</a>
                 <a class="list-box" href="remove-game.html">Remove/<br>Edit Product</a>
                 <a class="list-box" href="orders.html">Orders</a>
                 </div>
