--- a/admin/details/all-orders-info.html
+++ b/admin/details/all-orders-info.html
@@ -51,7 +51,7 @@
                 </div>
                
                 <div class="button-wrapper">
-                  <a href="../list/all-orders-game.html"> <div class="button grey">Cancel </div></a> 
+                  <a href="../list/all-orders-game.html"> <div id="cancel-btn" class="button grey">Cancel </div></a> 
                 </div>
             </div>
             </div>
