--- a/admin/details/game-info.html
+++ b/admin/details/game-info.html
@@ -98,8 +98,8 @@
                                 Storage: 65 GB available space</textarea></div>
                 </div>
                 <div class="button-wrapper">
-                    <div class="button">Save</div>
-                   <a href="../list/games-list.html"> <div class="button grey">Cancel</div></a>
+                    <div id="save-btn" class="button">Save</div>
+                   <a href="../list/games-list.html"> <div id="cancel-btn" class="button grey">Cancel</div></a>
                 </div>
             </div>
             </div>
