--- a/admin/list/cards-list.html
+++ b/admin/list/cards-list.html
@@ -41,7 +41,7 @@
             <td>15</td>
             <td>$9.95</td>
             <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
-            <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
+            <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
               <th scope="row">1</th>
@@ -54,7 +54,7 @@
             <td>15</td>
             <td>$9.95</td>
             <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
-            <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
+            <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
               <th scope="row">1</th>
@@ -67,7 +67,7 @@
               <td>15</td>
               <td>$9.95</td>
               <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
-              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
+              <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
               <th scope="row">1</th>
@@ -80,7 +80,7 @@
               <td>15</td>
               <td>$9.95</td>
               <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
-              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
+              <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
               <th scope="row">1</th>
@@ -93,7 +93,7 @@
               <td>15</td>
               <td>$9.95</td>
               <td><a href="../card-info.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
-              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
+              <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Delete"/></td>
 
         </tbody>
       </table>
