--- a/admin/list/games-list.html
+++ b/admin/list/games-list.html
@@ -37,7 +37,7 @@
             <td>Steam</td>
             <td>5</td>
             <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
-            <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
+            <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
                 <th scope="row">2</th>
@@ -48,7 +48,7 @@
                 <td>EA</td>
                 <td>7</td>
                 <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
-                <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
+                <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
               <th scope="row">3</th>
@@ -59,7 +59,7 @@
               <td>Microsoft</td>
               <td>7</td>
               <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
-              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
+              <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
               <th scope="row">4</th>
@@ -70,7 +70,7 @@
               <td>ProSoft</td>
               <td>15</td>
               <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
-              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
+              <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
            <th scope="row">5</th>
@@ -81,7 +81,7 @@
            <td>Uplay</td>
            <td>26</td>
            <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
-           <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
+           <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
               <th scope="row">6</th>
@@ -92,7 +92,7 @@
            <td>Rockstar Game</td>
            <td>16</td>
            <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
-           <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
+           <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
           <tr>
               <th scope="row">7</th>
@@ -103,7 +103,7 @@
               <td>Uplay</td>
               <td>46</td>
               <td><a href="../details/game-info.html" ><button type="button" class="btn btn-warning">Edit</button></a></td>
-              <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Remove"/></td>
+              <td><input type="text" size="1"><input id="remove-btn" type="submit" class="submit-btn" value="Remove"/></td>
           </tr>
         </tbody>
       </table>
