--- a/admin/add-card.html
+++ b/admin/add-card.html
@@ -46,8 +46,10 @@
             <div class="list">
                 <a class="list-box" href="dashboard-game.html">Dashboard</a>
                 <a class="list-box main" href="add-game.html">Add Product</a>
+                <a class="list-box" href="customer.html">Customer</a>
                 <a class="list-box" href="remove-card.html">Remove/<br>Edit Product</a>
                 <a class="list-box" href="orders.html">Orders</a>
+                
             </div>
             <div class="info">
                <div class="add-product-title"> 
